--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>com.example.serviceappointmentmanagementsystem/com.example.serviceappointmentmanagementsystem.HelloApplication</mainClass>
+              <mainClass>com.example.serviceappointmentmanagementsystem/com.example.serviceappointmentmanagementsystem.AppointmentManagementSystem</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
